--- a/index.html/las.html
+++ b/index.html/las.html
@@ -25,8 +25,8 @@
 <img src="las1.png" class="las"></div>
 <div class="muza"> 
     <audio controls>
-        <source src="zielone.mp3" type="audio/mpeg" />
-        <source src="zielone.ogg" type="audio/ogg" />
+        <source src="muza.mp3" type="audio/mpeg" />
+        <source src="muza.ogg" type="audio/ogg" />
         "Plik audio nie jest obsługiwany przez przeglądarkę,"
     </audio>
 </div>
