--- a/index.html/las.html
+++ b/index.html/las.html
@@ -9,13 +9,7 @@
 </head>
 <body>
 <script>
-    alert('Zrelaksuj się')
-</script>
-<script>
-    alert('jesteś oazą spokoju')
-</script>
-<script>
-    alert('Powodzenia')
+    alert('Ciesz się muzyką')
 </script>
 <div class="scene">
 <div class="text">
